update style and list

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CheatSheet",
+  "name": "cheatsheet",
   "private": true,
   "description": "Develop CheatSheet",
   "version": "1.0.0",
