--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,11 @@
 {
   "endOfLine": "lf",
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
+  "jsxSingleQuote": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
   "tabWidth": 4,
   "trailingComma": "es5"
 }
